2007-Aug-28  Heikki Junnila <hjunnila@users.sf.net>
	* Implemented window & splitter state save/load to Fixture Manager.

2007-Aug-28  Heikki Junnila <hjunnila@users.sf.net>
	* Implemented font & frequency save/load to Monitor.

2007-Aug-28  Heikki Junnila <hjunnila@users.sf.net>
	* Implemented window position load/save to monitor.
	* Reorganized App into logical groups.
	* Changed blackout indicator to invert the text color as well.
	* Capitalized blackout indicator text completely.

2007-Aug-27  Heikki Junnila <hjunnila@users.sf.net>
	* Implemented window position load/save to fixture console.

2007-Aug-27  Heikki Junnila <hjunnila@users.sf.net>
	* Got rid of the QInputDialog in BusProperties dialog and
	  switched to QListViewItem renaming.
	* Editing the name of a bus will do Doc::setModified()

2007-Aug-27  Heikki Junnila <hjunnila@users.sf.net>
	* Implemented support for generic fixtures so we don't have to
	  create fixture definitions for simple dimmers.
	* Added function type column to chaser & collection editors.
	* Replaced some remaining "device" texts with "fixture"

2007-Aug-26  Heikki Junnila <hjunnila@users.sf.net>
	* Renamed dce directory to fixtureeditor

2007-Aug-26  Heikki Junnila <hjunnila@users.sf.net>
	* Once again: HUUUGE commit
	* Workspace background is changed thru workspace context menu
	* Changed file format for workspaces completely to XML
	  -> TODO: .qlc -> .qxf converter
	* Replaced Device class with Fixture class
	* Replaced all strings speaking of "device" to "fixture".
	* TODO: Virtualconsole doesn't get saved/loaded yet...

2007-Jun-03  Heikki Junnila <hjunnila@users.sf.net>
	* Removed uic_editpresetvalue.cpp from dce/Makefile.am

2007-May-28  Heikki Junnila <hjunnila@users.sf.net>
	* Fixed lots of crash problems with fixture editor

2007-May-26  Heikki Junnila <hjunnila@users.sf.net>
	* Fixed QLCCapability::operator=() to return *this
	* Fixed QLCFixtureMode::channelNumber() to return KChannelInvalid