@@ -1,4 +1,8 @@
 2007-Aug-28  Heikki Junnila <hjunnila@users.sf.net>
+	* Fixture console gets deleted again when its fixture is deleted.
+	* New fixtures are selected immediately in fixture manager.
+
+2007-Aug-28  Heikki Junnila <hjunnila@users.sf.net>
 	* Implemented window & splitter state save/load to Fixture Manager.
 
 2007-Aug-28  Heikki Junnila <hjunnila@users.sf.net>
